(feat): update groceries backend to listen to plan recipes
